# AudioVideoStudyCodeTwo

./: README.md
FFmpegv播放视频有声音，暂停，释放、快进、退后/: CMakeLists.txt  build.gradle
FFmpegv播放视频有声音，暂停，释放、快进、退后/src/androidTest/java/com/test/ffmpegvideoplay/: ExampleInstrumentedTest.java
FFmpegv播放视频有声音，暂停，释放、快进、退后/src/main/: AndroidManifest.xml
FFmpegv播放视频有声音，暂停，释放、快进、退后/src/main/cpp/: FFmpegMusic.cpp  FFmpegMusic.h  FFmpegVideo.cpp  FFmpegVideo.h  Log.h  native-lib.cpp
FFmpegv播放视频有声音，暂停，释放、快进、退后/src/main/java/com/test/ffmpegvideoplay/: MainActivity.java  Play.java  VideoView.java
FFmpegv播放视频有声音，暂停，释放、快进、退后/src/main/res/layout/: activity_main.xml
FFmpegv播放视频有声音，暂停，释放、快进、退后/src/main/res/values/: strings.xml
FFmpegv播放视频有声音，暂停，释放、快进、退后/src/test/java/com/test/ffmpegvideoplay/: ExampleUnitTest.java
FFmpeg使用OpenSLES播放音乐，能停止/: CMakeLists.txt  build.gradle
FFmpeg使用OpenSLES播放音乐，能停止/src/androidTest/java/com/test/ffmpegopensles/: ExampleInstrumentedTest.java
FFmpeg使用OpenSLES播放音乐，能停止/src/main/: AndroidManifest.xml
FFmpeg使用OpenSLES播放音乐，能停止/src/main/cpp/: FFmpegMusic.cpp  FFmpegMusic.h  native-lib.cpp
FFmpeg使用OpenSLES播放音乐，能停止/src/main/java/com/test/ffmpegopensles/: MainActivity.java  MusicPlay.java
FFmpeg使用OpenSLES播放音乐，能停止/src/main/res/layout/: activity_main.xml
FFmpeg使用OpenSLES播放音乐，能停止/src/main/res/values/: strings.xml
FFmpeg使用OpenSLES播放音乐，能停止/src/test/java/com/test/ffmpegopensles/: ExampleUnitTest.java
FFmpeg播放音乐（保程序不死）/: build.gradle
FFmpeg播放音乐（保程序不死）/src/main/cpp/: native-lib.cpp  native-lib.h
FFmpeg播放音乐（保程序不死）/src/main/java/com/ws/ffmpegandroidavfilter/: MainActivity.java
FFmpeg播放音乐（保程序不死）/src/main/res/layout/: activity_main.xml
FFmpeg给视频换声音/: build.gradle
FFmpeg给视频换声音/src/androidTest/java/com/ws/ffmpegandroidaddmusic/: ExampleInstrumentedTest.java
FFmpeg给视频换声音/src/main/cpp/: native-lib.cpp
FFmpeg给视频换声音/src/main/java/com/ws/ffmpegandroidaddmusic/: MainActivity.java
FFmpeg给视频换声音/src/main/res/layout/: activity_main.xml
